# wish

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  README.md  eslint.config.mjs  package.json
ansible/: README.md  inventory.yml  playbook.yml
ansible/group_vars/: all.yml  music.yml
ansible/host_vars/: music.yml
ansible/templates/: caddy-wish.conf.j2  wish-lan.config.toml.j2  wish-proxy.service.j2  wish-tunnel.service.j2  wish.config.toml.j2  wish.service.j2
deploy/deemix/: README.md  docker-compose.local.yml  docker-compose.yml
deploy/deemix/config/: config.json
frontend/: admin.html  index.html  mock.html
frontend/css/: style.css
frontend/js/: admin.js  app.js  playlists.js
migrations/: 001_initial_schema.sql  002_admin_fields.sql  20260721000000_playlists.sql  20260721120000_playlist_attempts.sql  20260721180000_first_available.sql  20260723134551_deemix_tracking.sql
scripts/: assess.sh  build-html.mjs  check-exports.mjs  lint-html.mjs  test-playlist.sh  track-deemix.sh  validate.sh
scripts/git-hooks/: pre-commit
src/: api.rs  config.rs  db.rs  deemix.rs  downloader.rs  error.rs  lib.rs  main.rs  models.rs  playlists.rs  soundcloud.rs  spotify.rs  youtube.rs
tests/: api_playlists.rs  api_submissions.rs  test-pipeline.sh
tests/common/: mod.rs
