[package]
name = "wish"
version = "0.2.0"
edition = "2024"
description = "Song request server — guests submit links, tracks get downloaded for the DJ"

[dependencies]
axum = "0.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
dotenvy = "0.15"
rust-embed = "8"
urlencoding = "2"
mime_guess = "2"
which = "7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
rspotify = { version = "0.15", default-features = false, features = ["client-reqwest"] }

chrono = "0.4"
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tower = "0.5"
